[package]
    edition = "2024"
    name    = "orca-rs"
    version = "0.1.2"

[dependencies]
    anyhow             = { version = "^1", default-features = false }
    binrw              = { version = "^0.15.0" }
    bondrewd           = { version = "*", features = ["derive"] }
    bytemuck           = "*"
    crc                = "^3"
    defmt              = "*"
    embedded-io-async  = { version = "0.7.0" }
    embedded-registers = "^0.9"
    num_enum           = { version = "0.7.4" }
    rmodbus            = "^0.12"
    serde              = { version = "^1", features = ["derive"] }
[dev-dependencies]
    embedded-io-adapters = { version = "0.7.0", features = ["tokio-1"] }
    futures              = "^0.3"
    tokio                = { version = "^1", features = ["full"] }
    tokio-serial         = "*"
